--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -22,7 +22,18 @@ nav:
   - Shortcuts: Shortcuts.md
   - FAQ: FAQ.md
 
+theme:
+  name: readthedocs
+  highlightjs: true
+plugins:
+  - search
+  - mkdocstrings:
+      handlers:
+        # See: https://mkdocstrings.github.io/python/usage/
+        python:
+          options:
+            docstring_style: sphinx
 markdown_extensions:
-    - admonition
-    - footnotes
-theme: readthedocs
+  - markdown_include.include:
+      base_path: .
+  - admonition
