--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,16 +1,28 @@
 site_name: Scene Forge
-theme:
-  name: readthedocs
-  highlightjs: true
-plugins:
-  - search
-  - mkdocstrings:
-      handlers:
-        # See: https://mkdocstrings.github.io/python/usage/
-        python:
-          options:
-            docstring_style: sphinx
+nav:
+- Getting Started:
+  - Start: index.md
+  - Getting Started: Getting_Started.md
+- Systems:
+  - Prototype Objects: Prototype_Objects.md
+  - Collections: Collections.md
+  - Objects Convert: Object_Convert.md
+  - Add LOD Group: Add_LOD_Group.md
+  - Composition Guides: Composition_Guides.md
+  - Line Array: Line_Array.md
+  - Random Rottation: Random_Rotation.md
+  - Random Scale: Random_Scale.md
+  - Time of Day Presets: Time_of_Day_Preset.md
+- Scattering:
+  - Point Scatter: Point_Scatter.md
+  - Area Scatter: Area_Scatter.md
+  - Mesh Scatter: Mesh_Scatter.md
+- FAQ:
+  - Package Clean Up: Package_Clean_Up.md
+  - Shortcuts: Shortcuts.md
+  - FAQ: FAQ.md
+
 markdown_extensions:
-  - markdown_include.include:
-      base_path: .
-  - admonition
+    - admonition
+    - footnotes
+theme: readthedocs
