--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -35,5 +35,5 @@ plugins:
             docstring_style: sphinx
 markdown_extensions:
   - markdown_include.include:
-      base_path: .
+      base_path: docs
   - admonition
