--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -58,9 +58,9 @@ pyyaml==6.0
     #   pyyaml-env-tag
 pyyaml-env-tag==0.1
     # via mkdocs
-six==1.16.0
+#six==1.16.0
     # via python-dateutil
-watchdog==2.1.9
+#watchdog==2.1.9
     # via mkdocs
-zipp==3.8.0
+#zipp==3.8.0
     # via importlib-metadata
