--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -7,6 +7,7 @@ nav:
   - Prototype Objects: Prototype_Objects.md
   - Collections: Collections.md
   - Objects Convert: Object_Convert.md
+  - Object Presets: Object_Presets.md
   - Add LOD Group: Add_LOD_Group.md
   - Composition Guides: Composition_Guides.md
   - Line Array: Line_Array.md
@@ -28,6 +29,7 @@ theme:
   highlightjs: true
 plugins:
   - search
+  - pdf-export
   - mkdocstrings:
       handlers:
         # See: https://mkdocstrings.github.io/python/usage/
