--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,30 +1,30 @@
 site_name: Scene Forge
 nav:
 - Getting Started:
-  - What is Scene Forge?: index.md
-  - Getting Started: Getting_Started.md
+  - What is Scene Forge?: 01_index.md
+  - Getting Started: 02_Getting_Started.md
 - Systems:
-  - Prototype Objects: Prototype_Objects.md
-  - Collections: Collections.md
-  - Objects Convert: Object_Convert.md
-  - Quick Convert: Quick_Convert.md
-  - Object Presets: Object_Presets.md
-  - Add LOD Group: Add_LOD_Group.md
-  - Composition Guides: Composition_Guides.md
-  - Line Array: Line_Array.md
-  - Radial Array: Radial_Array.md
-  - Random Rottation: Random_Rotation.md
-  - Random Scale: Random_Scale.md
-  - Time of Day Presets: Time_of_Day_Preset.md
+  - Prototype Objects: 03_Prototype_Objects.md
+  - Collections: 04_Collections.md
+  - Objects Convert: 05_Object_Convert.md
+  - Quick Convert: 06_Quick_Convert.md
+  - Object Presets: 07_Object_Presets.md
+  - Add LOD Group: 08_Add_LOD_Group.md
+  - Composition Guides: 09_Composition_Guides.md
+  - Line Array: 10_Line_Array.md
+  - Radial Array: 11_Radial_Array.md
+  - Random Rottation: 12_Random_Rotation.md
+  - Random Scale: 13_Random_Scale.md
+  - Time of Day Presets: 14_Time_of_Day_Preset.md
 - Scattering:
-  - Point Scatter: Point_Scatter.md
-  - Area Scatter: Area_Scatter.md
-  - Mesh Scatter: Mesh_Scatter.md
+  - Point Scatter: 15_Point_Scatter.md
+  - Area Scatter: 16_Area_Scatter.md
+  - Mesh Scatter: 17_Mesh_Scatter.md
 - FAQ:
-  - Package Clean Up: Package_Clean_Up.md
-  - Shortcuts: Shortcuts.md
-  - FAQ: FAQ.md
-  - Reporting Issues: Reporting_Issues.md
+  - Package Clean Up: 18_Package_Clean_Up.md
+  - Shortcuts: 19_Shortcuts.md
+  - FAQ: 20_FAQ.md
+  - Reporting Issues: 21_Reporting_Issues.md
 
 theme:
   name: readthedocs
